Add support for local feature files
Karaf 4.1 introduces local feature files for some dependencies. This
patch adjusts populate-local-repo so that it copes with them instead
of crashing.

Change-Id: Ia709011d928abd4994346fde5002c3ff35fe874a
Signed-off-by: Stephen Kitt <skitt@redhat.com>